# OpenEgyptology.org

./: .editorconfig  .gitignore  README.md
tools/pyramid-casing-stone-analysis/: README.md  pyproject.toml
tools/pyramid-casing-stone-analysis/src/: psd_to_svg.py  webpagescript.py
